Added "generation" column and "experience" columns

--- a/recommendation.ipynb
+++ b/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,69 +26,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'>=' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[210], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m uf\u001b[39m.\u001b[39mloc[(uf[\u001b[39m\"\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m2013\u001b[39m) \u001b[39m&\u001b[39m (uf[\u001b[39m\"\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m2025\u001b[39m), \u001b[39m\"\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m\"\u001b[39m ] \u001b[39m=\u001b[39m  \u001b[39m\"\u001b[39m\u001b[39mGen Alpha\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     29\u001b[0m uf\u001b[39m.\u001b[39mloc[(uf[\u001b[39m\"\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1995\u001b[39m) \u001b[39m&\u001b[39m (uf[\u001b[39m\"\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m2012\u001b[39m), \u001b[39m\"\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m\"\u001b[39m ] \u001b[39m=\u001b[39m  \u001b[39m\"\u001b[39m\u001b[39mGen Z\u001b[39m\u001b[39m\"\u001b[39m \n\u001b[1;32m---> 30\u001b[0m uf\u001b[39m.\u001b[39mloc[(uf[\u001b[39m\"\u001b[39;49m\u001b[39mgeneration\u001b[39;49m\u001b[39m\"\u001b[39;49m] \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m1980\u001b[39;49m) \u001b[39m&\u001b[39m (uf[\u001b[39m\"\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1994\u001b[39m), \u001b[39m\"\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m\"\u001b[39m ] \u001b[39m=\u001b[39m  \u001b[39m\"\u001b[39m\u001b[39mMillenials\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     31\u001b[0m \u001b[39m#uf.loc[(uf[\"generation\"] >= 1965) & (uf[\"generation\"] <= 1979), \"generation\" ] =  \"Gen X\"\u001b[39;00m\n\u001b[0;32m     33\u001b[0m uf\u001b[39m.\u001b[39mdtypes\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\ops\\common.py:72\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mNotImplemented\u001b[39m\n\u001b[0;32m     70\u001b[0m other \u001b[39m=\u001b[39m item_from_zerodim(other)\n\u001b[1;32m---> 72\u001b[0m \u001b[39mreturn\u001b[39;00m method(\u001b[39mself\u001b[39;49m, other)\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\arraylike.py:62\u001b[0m, in \u001b[0;36mOpsMixin.__ge__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[39m@unpack_zerodim_and_defer\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m__ge__\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     61\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__ge__\u001b[39m(\u001b[39mself\u001b[39m, other):\n\u001b[1;32m---> 62\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cmp_method(other, operator\u001b[39m.\u001b[39;49mge)\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\series.py:6243\u001b[0m, in \u001b[0;36mSeries._cmp_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   6240\u001b[0m rvalues \u001b[39m=\u001b[39m extract_array(other, extract_numpy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, extract_range\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m   6242\u001b[0m \u001b[39mwith\u001b[39;00m np\u001b[39m.\u001b[39merrstate(\u001b[39mall\u001b[39m\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m-> 6243\u001b[0m     res_values \u001b[39m=\u001b[39m ops\u001b[39m.\u001b[39;49mcomparison_op(lvalues, rvalues, op)\n\u001b[0;32m   6245\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_construct_result(res_values, name\u001b[39m=\u001b[39mres_name)\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\ops\\array_ops.py:287\u001b[0m, in \u001b[0;36mcomparison_op\u001b[1;34m(left, right, op)\u001b[0m\n\u001b[0;32m    284\u001b[0m     \u001b[39mreturn\u001b[39;00m invalid_comparison(lvalues, rvalues, op)\n\u001b[0;32m    286\u001b[0m \u001b[39melif\u001b[39;00m is_object_dtype(lvalues\u001b[39m.\u001b[39mdtype) \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(rvalues, \u001b[39mstr\u001b[39m):\n\u001b[1;32m--> 287\u001b[0m     res_values \u001b[39m=\u001b[39m comp_method_OBJECT_ARRAY(op, lvalues, rvalues)\n\u001b[0;32m    289\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    290\u001b[0m     res_values \u001b[39m=\u001b[39m _na_arithmetic_op(lvalues, rvalues, op, is_cmp\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\ops\\array_ops.py:75\u001b[0m, in \u001b[0;36mcomp_method_OBJECT_ARRAY\u001b[1;34m(op, x, y)\u001b[0m\n\u001b[0;32m     73\u001b[0m     result \u001b[39m=\u001b[39m libops\u001b[39m.\u001b[39mvec_compare(x\u001b[39m.\u001b[39mravel(), y\u001b[39m.\u001b[39mravel(), op)\n\u001b[0;32m     74\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 75\u001b[0m     result \u001b[39m=\u001b[39m libops\u001b[39m.\u001b[39;49mscalar_compare(x\u001b[39m.\u001b[39;49mravel(), y, op)\n\u001b[0;32m     76\u001b[0m \u001b[39mreturn\u001b[39;00m result\u001b[39m.\u001b[39mreshape(x\u001b[39m.\u001b[39mshape)\n",
-      "File \u001b[1;32mc:\\Users\\titot\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\_libs\\ops.pyx:107\u001b[0m, in \u001b[0;36mpandas._libs.ops.scalar_compare\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'int'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>user_completed</th>\n",
+       "      <th>experience</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>location</th>\n",
+       "      <th>generation</th>\n",
+       "      <th>stats_episodes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2255153</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Chennai, India</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>3391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37326</td>\n",
+       "      <td>195</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Detroit,Michigan</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>4903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>228342</td>\n",
+       "      <td>414</td>\n",
+       "      <td>Veteran</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Nayarit, Mexico</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>9701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>327311</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Malaysia, Kuantan</td>\n",
+       "      <td>Gen Z</td>\n",
+       "      <td>697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5015094</td>\n",
+       "      <td>114</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Nijmegen, Nederland</td>\n",
+       "      <td>Gen Z</td>\n",
+       "      <td>1847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108706</th>\n",
+       "      <td>797785</td>\n",
+       "      <td>213</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Poland:</td>\n",
+       "      <td>Gen Z</td>\n",
+       "      <td>3939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108707</th>\n",
+       "      <td>1396285</td>\n",
+       "      <td>116</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>nhollywood, california</td>\n",
+       "      <td>Gen Z</td>\n",
+       "      <td>2537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108708</th>\n",
+       "      <td>2478991</td>\n",
+       "      <td>103</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>Gen Z</td>\n",
+       "      <td>2869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108709</th>\n",
+       "      <td>3975907</td>\n",
+       "      <td>239</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Latvia, Riga</td>\n",
+       "      <td>Gen Z</td>\n",
+       "      <td>4469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108710</th>\n",
+       "      <td>1289601</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Birmingham, England</td>\n",
+       "      <td>Gen Z</td>\n",
+       "      <td>3822</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>104869 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        user_id  user_completed experience  gender                location  \\\n",
+       "0       2255153              49     Active  Female         Chennai, India    \n",
+       "1         37326             195     Active    Male        Detroit,Michigan   \n",
+       "2        228342             414    Veteran    Male         Nayarit, Mexico   \n",
+       "3        327311               5    Regular  Female       Malaysia, Kuantan   \n",
+       "4       5015094             114    Regular    Male     Nijmegen, Nederland   \n",
+       "...         ...             ...        ...     ...                     ...   \n",
+       "108706   797785             213     Active    Male                 Poland:   \n",
+       "108707  1396285             116    Regular  Female  nhollywood, california   \n",
+       "108708  2478991             103    Regular  Female                 Belgium   \n",
+       "108709  3975907             239     Active    Male            Latvia, Riga   \n",
+       "108710  1289601              73     Active  Female     Birmingham, England   \n",
+       "\n",
+       "        generation  stats_episodes  \n",
+       "0       Millenials            3391  \n",
+       "1       Millenials            4903  \n",
+       "2       Millenials            9701  \n",
+       "3            Gen Z             697  \n",
+       "4            Gen Z            1847  \n",
+       "...            ...             ...  \n",
+       "108706       Gen Z            3939  \n",
+       "108707       Gen Z            2537  \n",
+       "108708       Gen Z            2869  \n",
+       "108709       Gen Z            4469  \n",
+       "108710       Gen Z            3822  \n",
+       "\n",
+       "[104869 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "uf = users.loc[:, [\"user_id\", \"user_completed\", \"user_days_spent_watching\", \"gender\", \"location\", \"birth_date\", \"stats_episodes\"]]\n",
+    "#GENERATE USER VECTOR\n",
     "\n",
     "#change days_spent_watching to a range: check if above certain amount and put a number for the vector\n",
     "#check if user_completed is above certain amount\n",
     "#location?\n",
-    "#convert birthdate to age\n",
     "\n",
-    "#useful_uf = \n",
+    "#vector_uf = \n",
     "\n",
-    "#convert birth_date to age\n",
+    "uf = users.loc[:, [\"user_id\", \"user_completed\", \"user_days_spent_watching\", \"gender\", \"location\", \"birth_date\", \"stats_episodes\"]]\n",
     "uf[\"birth_date\"] = pd.to_datetime(uf[\"birth_date\"])\n",
-    "#uf[\"birth_date\"] = datetime.now() - uf[\"birth_date\"]\n",
     "\n",
-    "def date_to_age(days):\n",
-    "    seconds = days.total_seconds()\n",
-    "    years = seconds/3600/24/365.25\n",
-    "    return int(years)\n",
+    "#Only include users who have completed at least 5 anime\n",
+    "uf = uf[uf[\"user_completed\"] >= 5]\n",
     "\n",
-    "def birth_year(date):\n",
+    "#Convert birth years to generations\n",
+    "def get_birth_year(date):\n",
     "    birth_year = date.strftime(\"%Y\")\n",
     "    return int(birth_year)\n",
     "\n",
-    "uf[\"birth_date\"] = uf[\"birth_date\"].apply(birth_year)\n",
-    "#age = uf[\"birth_date\"].apply(to_age)\n",
+    "uf[\"birth_date\"] = uf[\"birth_date\"].apply(get_birth_year)\n",
     "\n",
     "uf = uf.rename(columns={\"birth_date\":\"generation\"})\n",
     "\n",
-    "uf.loc[(uf[\"generation\"] >= 2013) & (uf[\"generation\"] <= 2025), \"generation\" ] =  \"Gen Alpha\"\n",
-    "uf.loc[(uf[\"generation\"] >= 1995) & (uf[\"generation\"] <= 2012), \"generation\" ] =  \"Gen Z\" \n",
-    "uf.loc[(uf[\"generation\"] >= 1980) & (uf[\"generation\"] <= 1994), \"generation\" ] =  \"Millenials\"\n",
-    "#uf.loc[(uf[\"generation\"] >= 1965) & (uf[\"generation\"] <= 1979), \"generation\" ] =  \"Gen X\"\n",
+    "#Assign generations based on birth year\n",
+    "generations = [\n",
+    "    (uf[\"generation\"] >= 2013) & (uf[\"generation\"] <= 2025),\n",
+    "    (uf[\"generation\"] >= 1995) & (uf[\"generation\"] <= 2012),\n",
+    "    (uf[\"generation\"] >= 1980) & (uf[\"generation\"] <= 1994),\n",
+    "    (uf[\"generation\"] >= 1965) & (uf[\"generation\"] <= 1979)\n",
+    "]\n",
     "\n",
-    "#changes column type incorrectly to string which is why it cant do anymore logic comparisons\n",
-    "uf.dtypes\n",
+    "gen_values = [\n",
+    "    \"Gen Alpha\",\n",
+    "    \"Gen Z\",\n",
+    "    \"Millenials\",\n",
+    "    \"Gen X\"\n",
+    "]\n",
+    "uf[\"generation\"] = np.select(generations, gen_values, default=uf[\"generation\"])\n",
     "\n",
-    "#uf\n",
+    "#Cast days_watched to integers so that users are not missed in conditions\n",
+    "uf[\"user_days_spent_watching\"] = uf[\"user_days_spent_watching\"].astype(\"int\")\n",
+    "#Assign experience levels based on days watched\n",
+    "user_exp = [\n",
+    "    (uf[\"user_days_spent_watching\"] >= 0) & (uf[\"user_days_spent_watching\"] <= 5),\n",
+    "    (uf[\"user_days_spent_watching\"] >= 6) & (uf[\"user_days_spent_watching\"] <= 50),\n",
+    "    (uf[\"user_days_spent_watching\"] >= 51) & (uf[\"user_days_spent_watching\"] <= 99),\n",
+    "    (uf[\"user_days_spent_watching\"] >= 100)\n",
+    "]\n",
     "\n",
-    "#get the users' ages\n",
-    "#maybe group into: boomers, millenials, zoomers \n",
-    "#find users that watched the same anime and check ratings"
+    "exp_values = [\n",
+    "    \"Newbie\",\n",
+    "    \"Regular\",\n",
+    "    \"Active\",\n",
+    "    \"Veteran\"\n",
+    "]\n",
+    "\n",
+    "uf[\"user_days_spent_watching\"] = np.select(user_exp, exp_values, default=uf[\"user_days_spent_watching\"])\n",
+    "uf = uf.rename(columns={\"user_days_spent_watching\":\"experience\"})\n",
+    "uf\n",
+    "\n",
+    "#rewatched/completed         dropped/completed\n",
+    "#check ratings table and find users most loved and hated genres\n",
+    "#find users that watched the same anime and check ratings\n",
+    "\n",
+    "#anime vector\n",
+    "#consider the length of the anime. Ranges: short, medium, long"
    ]
   }
  ],
