--- a/recommendation.ipynb
+++ b/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generating additional user fetures for data embedding "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +62,6 @@
        "      <th>user_completed</th>\n",
        "      <th>experience</th>\n",
        "      <th>gender</th>\n",
-       "      <th>location</th>\n",
        "      <th>generation</th>\n",
        "      <th>stats_episodes</th>\n",
        "    </tr>\n",
@@ -66,7 +73,6 @@
        "      <td>49</td>\n",
        "      <td>Active</td>\n",
        "      <td>Female</td>\n",
-       "      <td>Chennai, India</td>\n",
        "      <td>Millenials</td>\n",
        "      <td>3391</td>\n",
        "    </tr>\n",
@@ -76,7 +82,6 @@
        "      <td>195</td>\n",
        "      <td>Active</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Detroit,Michigan</td>\n",
        "      <td>Millenials</td>\n",
        "      <td>4903</td>\n",
        "    </tr>\n",
@@ -86,7 +91,6 @@
        "      <td>414</td>\n",
        "      <td>Veteran</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Nayarit, Mexico</td>\n",
        "      <td>Millenials</td>\n",
        "      <td>9701</td>\n",
        "    </tr>\n",
@@ -96,7 +100,6 @@
        "      <td>5</td>\n",
        "      <td>Regular</td>\n",
        "      <td>Female</td>\n",
-       "      <td>Malaysia, Kuantan</td>\n",
        "      <td>Gen Z</td>\n",
        "      <td>697</td>\n",
        "    </tr>\n",
@@ -106,13 +109,11 @@
        "      <td>114</td>\n",
        "      <td>Regular</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Nijmegen, Nederland</td>\n",
        "      <td>Gen Z</td>\n",
        "      <td>1847</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -126,7 +127,6 @@
        "      <td>213</td>\n",
        "      <td>Active</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Poland:</td>\n",
        "      <td>Gen Z</td>\n",
        "      <td>3939</td>\n",
        "    </tr>\n",
@@ -136,7 +136,6 @@
        "      <td>116</td>\n",
        "      <td>Regular</td>\n",
        "      <td>Female</td>\n",
-       "      <td>nhollywood, california</td>\n",
        "      <td>Gen Z</td>\n",
        "      <td>2537</td>\n",
        "    </tr>\n",
@@ -146,7 +145,6 @@
        "      <td>103</td>\n",
        "      <td>Regular</td>\n",
        "      <td>Female</td>\n",
-       "      <td>Belgium</td>\n",
        "      <td>Gen Z</td>\n",
        "      <td>2869</td>\n",
        "    </tr>\n",
@@ -156,7 +154,6 @@
        "      <td>239</td>\n",
        "      <td>Active</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Latvia, Riga</td>\n",
        "      <td>Gen Z</td>\n",
        "      <td>4469</td>\n",
        "    </tr>\n",
@@ -166,46 +163,32 @@
        "      <td>73</td>\n",
        "      <td>Active</td>\n",
        "      <td>Female</td>\n",
-       "      <td>Birmingham, England</td>\n",
        "      <td>Gen Z</td>\n",
        "      <td>3822</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>104869 rows × 7 columns</p>\n",
+       "<p>104869 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id  user_completed experience  gender                location  \\\n",
-       "0       2255153              49     Active  Female         Chennai, India    \n",
-       "1         37326             195     Active    Male        Detroit,Michigan   \n",
-       "2        228342             414    Veteran    Male         Nayarit, Mexico   \n",
-       "3        327311               5    Regular  Female       Malaysia, Kuantan   \n",
-       "4       5015094             114    Regular    Male     Nijmegen, Nederland   \n",
-       "...         ...             ...        ...     ...                     ...   \n",
-       "108706   797785             213     Active    Male                 Poland:   \n",
-       "108707  1396285             116    Regular  Female  nhollywood, california   \n",
-       "108708  2478991             103    Regular  Female                 Belgium   \n",
-       "108709  3975907             239     Active    Male            Latvia, Riga   \n",
-       "108710  1289601              73     Active  Female     Birmingham, England   \n",
+       "        user_id  user_completed experience  gender  generation  stats_episodes\n",
+       "0       2255153              49     Active  Female  Millenials            3391\n",
+       "1         37326             195     Active    Male  Millenials            4903\n",
+       "2        228342             414    Veteran    Male  Millenials            9701\n",
+       "3        327311               5    Regular  Female       Gen Z             697\n",
+       "4       5015094             114    Regular    Male       Gen Z            1847\n",
+       "...         ...             ...        ...     ...         ...             ...\n",
+       "108706   797785             213     Active    Male       Gen Z            3939\n",
+       "108707  1396285             116    Regular  Female       Gen Z            2537\n",
+       "108708  2478991             103    Regular  Female       Gen Z            2869\n",
+       "108709  3975907             239     Active    Male       Gen Z            4469\n",
+       "108710  1289601              73     Active  Female       Gen Z            3822\n",
        "\n",
-       "        generation  stats_episodes  \n",
-       "0       Millenials            3391  \n",
-       "1       Millenials            4903  \n",
-       "2       Millenials            9701  \n",
-       "3            Gen Z             697  \n",
-       "4            Gen Z            1847  \n",
-       "...            ...             ...  \n",
-       "108706       Gen Z            3939  \n",
-       "108707       Gen Z            2537  \n",
-       "108708       Gen Z            2869  \n",
-       "108709       Gen Z            4469  \n",
-       "108710       Gen Z            3822  \n",
-       "\n",
-       "[104869 rows x 7 columns]"
+       "[104869 rows x 6 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,18 +196,15 @@
    "source": [
     "#GENERATE USER VECTOR\n",
     "\n",
-    "#change days_spent_watching to a range: check if above certain amount and put a number for the vector\n",
-    "#check if user_completed is above certain amount\n",
     "#location?\n",
     "\n",
-    "#vector_uf = \n",
-    "\n",
-    "uf = users.loc[:, [\"user_id\", \"user_completed\", \"user_days_spent_watching\", \"gender\", \"location\", \"birth_date\", \"stats_episodes\"]]\n",
+    "uf = users.loc[:, [\"user_id\", \"user_completed\", \"user_days_spent_watching\", \"gender\", \"birth_date\", \"stats_episodes\"]]\n",
     "uf[\"birth_date\"] = pd.to_datetime(uf[\"birth_date\"])\n",
     "\n",
     "#Only include users who have completed at least 5 anime\n",
     "uf = uf[uf[\"user_completed\"] >= 5]\n",
     "\n",
+    "#CREATE GENERATION FEATURE\n",
     "#Convert birth years to generations\n",
     "def get_birth_year(date):\n",
     "    birth_year = date.strftime(\"%Y\")\n",
@@ -250,7 +230,8 @@
     "]\n",
     "uf[\"generation\"] = np.select(generations, gen_values, default=uf[\"generation\"])\n",
     "\n",
-    "#Cast days_watched to integers so that users are not missed in conditions\n",
+    "#CREATE EXPERIENCE FEATURE\n",
+    "#Cast days_watched to integers so that users are not missed in conditions below\n",
     "uf[\"user_days_spent_watching\"] = uf[\"user_days_spent_watching\"].astype(\"int\")\n",
     "#Assign experience levels based on days watched\n",
     "user_exp = [\n",
@@ -269,14 +250,45 @@
     "\n",
     "uf[\"user_days_spent_watching\"] = np.select(user_exp, exp_values, default=uf[\"user_days_spent_watching\"])\n",
     "uf = uf.rename(columns={\"user_days_spent_watching\":\"experience\"})\n",
-    "uf\n",
+    "uf\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#COSINE?\n",
     "\n",
     "#rewatched/completed         dropped/completed\n",
     "#check ratings table and find users most loved and hated genres\n",
     "#find users that watched the same anime and check ratings\n",
     "\n",
     "#anime vector\n",
-    "#consider the length of the anime. Ranges: short, medium, long"
+    "#consider the length of the anime. Ranges: short, medium, long\n",
+    "#label encoding for normal fields\n",
+    "#one-hot encoding (binary) for genres\n",
+    "\n",
+    "#Go through anime_cleaned file\n",
+    "#Merge this file with the users file\n",
+    "#Find all the users that rated each anime\n",
+    "#Find what those users rated those anime and which groups those users belong to\n",
+    "# So you know users from group X liked anime Y \"this\" much\n",
+    "#Genre: Make each genre its own binary column\n",
+    "\n",
+    "#consider number of ratings anime has\n",
+    "#Exclude \"hentai genre\"\n",
+    "#remember to split the data\n",
+    "#all \"currently running\" anime show up as having 0 episodes\n",
+    "#not all anime have english titles\n",
+    "#filter type to TV only\n",
+    "#give user ability to choose long or short animes\n",
+    "\n",
+    "\n",
+    "#af = pd.DataFrame(anime)\n",
+    "#af = af.loc[pd.isna(af[\"title_english\"]) == False,:]\n",
+    "#af"
    ]
   }
  ],
