--- a/recommendation.ipynb
+++ b/recommendation.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "[104869 rows x 6 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,23 +250,63 @@
     "\n",
     "uf[\"user_days_spent_watching\"] = np.select(user_exp, exp_values, default=uf[\"user_days_spent_watching\"])\n",
     "uf = uf.rename(columns={\"user_days_spent_watching\":\"experience\"})\n",
-    "uf\n"
+    "uf\n",
+    "\n",
+    "#4. see if any shows appear in multiple people's top 10 lists\n",
+    "#Train set and test set\n",
+    "#Then use lightfm in a new version\n",
+    "\n",
+    "#take propensity to rewatch: rewatched/watched (rw)\n",
+    "#take propensity to drop: dropped/watched (dr)\n",
+    "#cosine similarity of all users and movies takes a lot of resources"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Game', 'Adventure', 'Shoujo', 'Fantasy', 'Cars', 'Shounen', 'ShoujoAi', 'Comedy', 'Ecchi', 'Sports', 'Music', 'Military', 'Yuri', 'Dementia', 'ShounenAi', 'Harem', 'Kids', 'Hentai', 'Vampire', 'Parody', 'Mystery', 'MartialArts', 'Supernatural', 'Action', 'Historical', 'Thriller', 'SliceofLife', 'Psychological', 'Demons', 'School', 'SuperPower', 'Romance', 'Drama', 'Seinen', 'Sci-Fi', 'Magic', 'Samurai', 'Police', 'Space', 'Josei', 'Mecha', 'Horror', 'Yaoi']\n"
+     ]
+    }
+   ],
    "source": [
-    "#COSINE?\n",
     "\n",
-    "#rewatched/completed         dropped/completed\n",
+    "#Building a dictionary of all genres - 43\n",
+    "def split(genres):\n",
+    "    return str(genres).split(\",\")\n",
+    "\n",
+    "split_genres = anime[\"genre\"].apply(split)\n",
+    "#Updating the set to get the individual genre names in the set instead of the original list of genres\n",
+    "genre_set = set()\n",
+    "for i in split_genres: \n",
+    "    genre_set.update(i)\n",
+    "result = list(genre_set)\n",
+    "\n",
+    "#Removing duplicates with blank spaces\n",
+    "final_result = []\n",
+    "for i in result:\n",
+    "    if i!=\"nan\":\n",
+    "        new = i.replace(\" \", \"\")\n",
+    "        final_result.append(new)\n",
+    "\n",
+    "#Removing duplicates now that spaces have been removed\n",
+    "genre_list = list(set(final_result))\n",
+    "print(genre_list)\n",
+    "\n",
+    "#COSINE similarity of anime\n",
+    "\n",
     "#check ratings table and find users most loved and hated genres\n",
-    "#find users that watched the same anime and check ratings\n",
     "\n",
     "#anime vector\n",
+    "#filter anime that only have a certain number of ratings\n",
+    "#feature: new-gen/classic/medium\n",
     "#consider the length of the anime. Ranges: short, medium, long\n",
+    "#consider production studio\n",
     "#label encoding for normal fields\n",
     "#one-hot encoding (binary) for genres\n",
     "\n",
@@ -281,7 +321,6 @@
     "#Exclude \"hentai genre\"\n",
     "#remember to split the data\n",
     "#all \"currently running\" anime show up as having 0 episodes\n",
-    "#not all anime have english titles\n",
     "#filter type to TV only\n",
     "#give user ability to choose long or short animes\n",
     "\n",
