"Favourite genres" working for individual user

--- a/recommendation.ipynb
+++ b/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "users = pd.read_csv(r\"D:\\dataset\\users_cleaned.csv\")\n",
     "anime = pd.read_csv(r\"D:\\dataset\\anime_cleaned.csv\")\n",
-    "ratings = pd.read_csv(r\"D:\\dataset\\animelists_cleaned.csv\", nrows = 2000000)\n",
+    "ratings = pd.read_csv(r\"D:\\dataset\\animelists_cleaned.csv\", nrows = 1000000)\n",
     "af = pd.DataFrame(anime)\n",
     "rf = pd.DataFrame(ratings)\n"
    ]
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -60,59 +60,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>user_completed</th>\n",
-       "      <th>experience</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>generation</th>\n",
-       "      <th>stats_episodes</th>\n",
+       "      <th>username</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>type</th>\n",
+       "      <th>my_score</th>\n",
+       "      <th>my_watched_episodes</th>\n",
+       "      <th>episodes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2255153</td>\n",
-       "      <td>49</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>3391</td>\n",
+       "      <td>-Ackerman</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Neon Genesis Evangelion: The End of Evangelion</td>\n",
+       "      <td>Sci-Fi, Dementia, Psychological, Drama, Mecha</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>37326</td>\n",
-       "      <td>195</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>4903</td>\n",
+       "      <td>-Ackerman</td>\n",
+       "      <td>10165</td>\n",
+       "      <td>Nichijou</td>\n",
+       "      <td>Slice of Life, Comedy, School</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>228342</td>\n",
-       "      <td>414</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>9701</td>\n",
+       "      <td>-Ackerman</td>\n",
+       "      <td>5081</td>\n",
+       "      <td>Bakemonogatari</td>\n",
+       "      <td>Romance, Supernatural, Mystery, Vampire</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>327311</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>697</td>\n",
+       "      <td>-Ackerman</td>\n",
+       "      <td>5114</td>\n",
+       "      <td>Fullmetal Alchemist: Brotherhood</td>\n",
+       "      <td>Action, Military, Adventure, Comedy, Drama, Ma...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>10</td>\n",
+       "      <td>64</td>\n",
+       "      <td>64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5015094</td>\n",
-       "      <td>114</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>1847</td>\n",
+       "      <td>-Ackerman</td>\n",
+       "      <td>6702</td>\n",
+       "      <td>Fairy Tail</td>\n",
+       "      <td>Action, Adventure, Comedy, Magic, Fantasy, Sho...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>10</td>\n",
+       "      <td>175</td>\n",
+       "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -122,75 +134,113 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108706</th>\n",
-       "      <td>797785</td>\n",
-       "      <td>213</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>3939</td>\n",
+       "      <th>550613</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>4898</td>\n",
+       "      <td>Kuroshitsuji</td>\n",
+       "      <td>Action, Comedy, Demons, Fantasy, Historical, S...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108707</th>\n",
-       "      <td>1396285</td>\n",
-       "      <td>116</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>2537</td>\n",
+       "      <th>550614</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Chrno Crusade</td>\n",
+       "      <td>Action, Historical, Demons, Supernatural, Romance</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108708</th>\n",
-       "      <td>2478991</td>\n",
-       "      <td>103</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>2869</td>\n",
+       "      <th>550615</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>167</td>\n",
+       "      <td>Scrapped Princess</td>\n",
+       "      <td>Adventure, Comedy, Drama, Fantasy, Mecha, Sci-...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108709</th>\n",
-       "      <td>3975907</td>\n",
-       "      <td>239</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>4469</td>\n",
+       "      <th>550616</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>Glass no Kamen (2005)</td>\n",
+       "      <td>Drama, Shoujo</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>8</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>108710</th>\n",
-       "      <td>1289601</td>\n",
-       "      <td>73</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>3822</td>\n",
+       "      <th>550617</th>\n",
+       "      <td>zzs</td>\n",
+       "      <td>269</td>\n",
+       "      <td>Bleach</td>\n",
+       "      <td>Action, Adventure, Comedy, Super Power, Supern...</td>\n",
+       "      <td>TV</td>\n",
+       "      <td>8</td>\n",
+       "      <td>207</td>\n",
+       "      <td>366</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>104869 rows × 6 columns</p>\n",
+       "<p>23563 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id  user_completed experience  gender  generation  stats_episodes\n",
-       "0       2255153              49     Active  Female  Millenials            3391\n",
-       "1         37326             195     Active    Male  Millenials            4903\n",
-       "2        228342             414    Veteran    Male  Millenials            9701\n",
-       "3        327311               5    Regular  Female       Gen Z             697\n",
-       "4       5015094             114    Regular    Male       Gen Z            1847\n",
-       "...         ...             ...        ...     ...         ...             ...\n",
-       "108706   797785             213     Active    Male       Gen Z            3939\n",
-       "108707  1396285             116    Regular  Female       Gen Z            2537\n",
-       "108708  2478991             103    Regular  Female       Gen Z            2869\n",
-       "108709  3975907             239     Active    Male       Gen Z            4469\n",
-       "108710  1289601              73     Active  Female       Gen Z            3822\n",
+       "         username  anime_id                                           title  \\\n",
+       "0       -Ackerman        32  Neon Genesis Evangelion: The End of Evangelion   \n",
+       "1       -Ackerman     10165                                        Nichijou   \n",
+       "2       -Ackerman      5081                                  Bakemonogatari   \n",
+       "3       -Ackerman      5114                Fullmetal Alchemist: Brotherhood   \n",
+       "4       -Ackerman      6702                                      Fairy Tail   \n",
+       "...           ...       ...                                             ...   \n",
+       "550613        zzs      4898                                    Kuroshitsuji   \n",
+       "550614        zzs        60                                   Chrno Crusade   \n",
+       "550615        zzs       167                               Scrapped Princess   \n",
+       "550616        zzs      1974                           Glass no Kamen (2005)   \n",
+       "550617        zzs       269                                          Bleach   \n",
        "\n",
-       "[104869 rows x 6 columns]"
+       "                                                    genre   type  my_score  \\\n",
+       "0           Sci-Fi, Dementia, Psychological, Drama, Mecha  Movie        10   \n",
+       "1                           Slice of Life, Comedy, School     TV        10   \n",
+       "2                 Romance, Supernatural, Mystery, Vampire     TV        10   \n",
+       "3       Action, Military, Adventure, Comedy, Drama, Ma...     TV        10   \n",
+       "4       Action, Adventure, Comedy, Magic, Fantasy, Sho...     TV        10   \n",
+       "...                                                   ...    ...       ...   \n",
+       "550613  Action, Comedy, Demons, Fantasy, Historical, S...     TV         8   \n",
+       "550614  Action, Historical, Demons, Supernatural, Romance     TV         8   \n",
+       "550615  Adventure, Comedy, Drama, Fantasy, Mecha, Sci-...     TV         8   \n",
+       "550616                                      Drama, Shoujo     TV         8   \n",
+       "550617  Action, Adventure, Comedy, Super Power, Supern...     TV         8   \n",
+       "\n",
+       "        my_watched_episodes  episodes  \n",
+       "0                         1         1  \n",
+       "1                        26        26  \n",
+       "2                        15        15  \n",
+       "3                        64        64  \n",
+       "4                       175       175  \n",
+       "...                     ...       ...  \n",
+       "550613                   24        24  \n",
+       "550614                   24        24  \n",
+       "550615                   24        24  \n",
+       "550616                   51        51  \n",
+       "550617                  207       366  \n",
+       "\n",
+       "[23563 rows x 8 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,29 +308,71 @@
     "\n",
     "#Only include users who have rated more than 10 anime\n",
     "num_user_ratings = rf.groupby(\"username\").size() \n",
-    "limit = num_user_ratings[num_user_ratings > 10].index\n",
+    "limit = num_user_ratings[num_user_ratings >= 10].index\n",
     "usernames = rf[\"username\"].isin(limit)\n",
     "rf = rf.loc[usernames]\n",
     "\n",
-    "#Create a merged dataframe of ratings and anime dataframes\n",
+    "#Merge the ratings and anime dataframes\n",
     "merge_rf = pd.merge(rf, af, on=\"anime_id\")\n",
-    "merge_rf = merge_rf.loc[:, [\"username\", \"anime_id\",\"title\",\"genre\", \"my_score\",\"my_watched_episodes\", \"episodes\"]]\n",
+    "merge_rf = merge_rf.loc[:, [\"username\", \"anime_id\",\"title\",\"genre\",\"type\", \"my_score\",\"my_watched_episodes\", \"episodes\"]]\n",
+    "\n",
+    "#Remove all anime ratings where the user has watched less than 10 episodes unless it is a movie\n",
+    "movies = merge_rf[merge_rf[\"type\"]==\"Movie\"]\n",
+    "valid_tv_shows = merge_rf[(merge_rf[\"type\"]==\"TV\") & (merge_rf[\"my_watched_episodes\"]>=10)]\n",
+    "merge_rf = pd.concat([movies, valid_tv_shows])\n",
+    "\n",
     "#Sort by highest rated anime by each user\n",
     "merge_rf.set_index(\"username\")\n",
     "merge_rf = merge_rf.groupby(\"username\").apply(lambda i:i.sort_values(by=\"my_score\", ascending=False))\n",
     "merge_rf.reset_index(drop=True, inplace=True)\n",
+    "\n",
     "#Only include top 10 highest rated anime per user\n",
     "merge_rf = merge_rf.groupby(\"username\").head(10)\n",
+    "                                                             \n",
+    "#Example user/ must make work for all users\n",
+    "user = \"Damonashu\"\n",
+    "user_ratings = merge_rf.loc[merge_rf[\"username\"]==user]\n",
     "\n",
-    "#Example user\n",
-    "merge_rf.loc[merge_rf[\"username\"]==\"karthiga\"]\n",
-    "#merge_rf\n",
-    "#get top 3 genres that appear the most\n",
+    "#Creating a list all genres in the top 10 for each user (including duplicates)\n",
+    "fav_list = [] #list of most popular genres for each user\n",
+    "user_genres = []\n",
     "\n",
-    "#fav_list = [] list of most popular genres for each user\n",
+    "#Concatenate genres for each anime into one list\n",
+    "for i in user_ratings[\"genre\"]:\n",
+    "    x = i.split()\n",
+    "    user_genres = user_genres + x\n",
+    "\n",
+    "final_result = []\n",
+    "for i,v in enumerate(user_genres):\n",
+    "    if v!=\"nan\":\n",
+    "        new = v.replace(\" \", \"\")\n",
+    "        new = v.replace(\",\", \"\")\n",
+    "        user_genres[i]=new\n",
+    "        \n",
+    "\n",
+    "#Find top 3 favourite most frequent genres in the top 10\n",
+    "for i in range(0, 3):\n",
+    "    most_popular = max(set(user_genres), key=user_genres.count)\n",
+    "    fav_list.append(most_popular)\n",
+    "    #Remove genre from the list once added to favourites\n",
+    "    for i in range(0, user_genres.count(most_popular)):\n",
+    "        user_genres.remove(most_popular)\n",
+    "\n",
+    "\n",
+    "#test\n",
+    "\n",
+    "#for i in merge_rf.groupby(\"username\")[\"genre\"]:\n",
+    "#    user_ratings = merge_rf.loc[merge_rf[\"username\"]==i[0]]\n",
+    "  \n",
+    "    #print(user_ratings[\"username\"])\n",
+    "#print(fav_list)\n",
+    "#user_ratings\n",
+    "\n",
+    "merge_rf\n",
+    "\n",
     "#put this list in merge with user df\n",
-    "\n",
-    "#user_id    |   fav_genre\n",
+    "#change num_episodes to anime length feature\n",
+    "#user_id  |  fav_genre | preferred anime length | new-gen/classic\n",
     "#account for number of episodes watched\n",
     "#get most popular genres \n",
     "#create the feature\n",
@@ -303,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -315,32 +407,33 @@
     }
    ],
    "source": [
+    "#Building a dictionary of all genres in a dataframe\n",
+    "def build_genre_list(dataframe):\n",
     "\n",
-    "#Building a dictionary of all genres - 43\n",
-    "def split(genres):\n",
-    "    return str(genres).split(\",\")\n",
+    "    def split(genres):\n",
+    "        return str(genres).split(\",\")\n",
     "\n",
-    "split_genres = af[\"genre\"].apply(split)\n",
-    "#Updating the set to get the individual genre names in the set instead of the original list of genres\n",
-    "genre_set = set()\n",
-    "for i in split_genres: \n",
-    "    genre_set.update(i)\n",
-    "result = list(genre_set)\n",
+    "    split_genres = dataframe[\"genre\"].apply(split)\n",
+    "    #Updating the set to get the individual genre names in the set instead of the original list of genres\n",
+    "    genre_set = set()\n",
+    "    for i in split_genres: \n",
+    "        genre_set.update(i)\n",
+    "    result = list(genre_set)\n",
     "\n",
-    "#Removing duplicates with blank spaces\n",
-    "final_result = []\n",
-    "for i in result:\n",
-    "    if i!=\"nan\":\n",
-    "        new = i.replace(\" \", \"\")\n",
-    "        final_result.append(new)\n",
+    "    #Removing blank spaces\n",
+    "    final_result = []\n",
+    "    for i in result:\n",
+    "        if i!=\"nan\":\n",
+    "            new = i.replace(\" \", \"\")\n",
+    "            final_result.append(new)\n",
     "\n",
-    "#Removing duplicates now that spaces have been removed\n",
-    "genre_list = list(set(final_result))\n",
-    "print(genre_list)\n",
+    "    #Removing duplicates now that spaces have been removed\n",
+    "    genre_list = list(set(final_result))\n",
+    "    print(genre_list)\n",
     "\n",
-    "#COSINE similarity of anime\n",
+    "user_genres = build_genre_list(af)\n",
     "\n",
-    "#check ratings table and find users most loved and hated genres\n",
+    "\n",
     "\n",
     "#anime vector\n",
     "#filter anime that only have a certain number of ratings\n",
